# tormor

./: ChangeLog  README.md  pyproject.toml  runtests.sh
.circleci/: config.yml
tests/: test_cmdline.py
tormor/: commands.py
tormor/tests/: test_run_script.py
