[tool.poetry]
name = "tormor"
version = "1.2"
description = "Postgres migration library"
authors = ["Tle Ekkul <aryuth.ekkul@proteus-tech.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
asyncpg = "^0.18.3"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
tormor = "tormor.main_script:script"